Correcting subnav format and adding new links

--- a/source/subnavs/pivotal_cloudbees_service_subnav.erb
+++ b/source/subnavs/pivotal_cloudbees_service_subnav.erb
@@ -13,9 +13,6 @@
       <li class="first expanded js-maintopic">
         <a href="/cloudbees/resources.html">Resource Requirements</a>
       </li>
-    </ul>
-    <b>Guides:</b>
-    <ul>
       <li class="first expanded js-maintopic">
         <a href="/cloudbees/continuous-delivery-java.html">Guide to Testing and Deploying a Java Application to Pivotal Cloud Foundry&reg;</a>
       </li>
@@ -24,6 +21,12 @@
       </li>
       <li class="first expanded js-maintopic">
         <a href="/cloudbees/security.html">Security-Integrating CloudBees Jenkins Enterprise with Pivotal Cloud Foundry&reg;</a>
+      </li>
+	 <li class="first expanded js-maintopic">
+        <a href="/cloudbees/restore.html">Restore CloudBees Jenkins Platform</a>
+      </li>
+	 <li class="first expanded js-maintopic">
+        <a href="/cloudbees/backup.html">Back Up CloudBees Jenkins Platform</a>
       </li>
     </ul>
   </div>
