Add clustering and partitions nav item to rabbitmq docs
[#118828025]

Signed-off-by: Svett Ralchev <sralchev@pivotal.io>

--- a/source/subnavs/pivotal_rabbitmq_service_subnav.erb
+++ b/source/subnavs/pivotal_rabbitmq_service_subnav.erb
@@ -20,6 +20,9 @@
         <a href="/rabbitmq-cf/policies.html">Policies</a>
       </li>
       <li class="first expanded js-maintopic">
+        <a href="/rabbitmq-cf/partitions.html">Clustering and Network Partitions</a>
+      </li>
+      <li class="first expanded js-maintopic">
         <a href="/rabbitmq-cf/managing.html">Managing</a>
       </li>
       <li class="first expanded js-maintopic">
