Add ODB Security to subnav
Signed-off-by: Maria Ntalla <mntalla@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -90,6 +90,12 @@
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#removing-service-plans">Removing service plans</a></span></li>
             </ul>
           </li>
+          <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/operating.html#security">Security</a></span>
+            <ul>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#bosh-api-endpoints">BOSH API Endpoints</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#bosh-uaa-permissions">BOSH UAA permissions</a></span></li>
+            </ul>
+          </li>
           <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/operating.html#troubleshooting">Troubleshooting</a></span>
             <ul>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#logs">Logs</a></span></li>
