Add docs on handling errors in service adapter
Signed-off-by: Maria Ntalla <mntalla@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -36,7 +36,12 @@
         <ul>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#what-is-required-of-the-service-authors">What is required of the Service Authors?</a></span></li>
           <li><span class="topic"><a href="/on-demand-service-broker/creating.html#creating-a-service-release">Creating a Service Release</a></span></li>
-          <li><span class="topic"><a href="/on-demand-service-broker/creating.html#creating-a-service-adapter">Creating a Service Adapter</a></span></li>
+          <li>
+            <span class="menu-subtitle-bold"><a href="/on-demand-service-broker/creating.html#creating-a-service-adapter">Creating a Service Adapter</a></span>
+            <ul>
+              <li><span class="topic"><a href="/on-demand-service-broker/creating.html#handling-errors">Handling errors</a></span></li>
+            </ul>
+          </li>
           <li>
             <span class="menu-subtitle-bold"><a href="/on-demand-service-broker/creating.html#configuring-manifest-generation">Configuring manifest generation</a></span>
             <ul>
