--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
   <!-- Always force latest IE rendering engine or request Chrome Frame -->
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400italic,400,600' rel='stylesheet' type='text/css'>
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>
     <% if data.page.title %>
@@ -65,31 +66,11 @@
 
 <div class="viewport">
   <div class='wrap'>
-    <script src="//use.typekit.net/clb0qji.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      try {
-        Typekit.load();
-      } catch (e) {
-      }
-    </script>
     <script type="text/javascript">
       document.domain = "<%= vars.domain_name %>";
     </script>
 
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: {families: ['Source+Sans+Pro:300italic,400italic,300,400,600:latin']}
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-            '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })();
-    </script>
+
 
     <% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "MySQL" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" %>
       <header class="global-header header header-layout">
