--- a/source/subnavs/pivotal_cloudbees_service_subnav.erb
+++ b/source/subnavs/pivotal_cloudbees_service_subnav.erb
@@ -1,33 +1,57 @@
-<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="first expanded js-maintopic">
-        <a id='home-nav-link' href="/cloudbees/Jenkins.html">CloudBees Jenkins Enterprise</a>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/cloudbees/Jenkins.html">CloudBees Jenkins Enterprise</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/cloudbees/release.html">Release Notes</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/release.html">Release Notes</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/cloudbees/resources.html">Resource Requirements</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/resources.html">Resource Requirements</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/cloudbees/continuous-delivery-java.html">Guide to Testing and Deploying a Java Application to Pivotal Cloud Foundry&reg;</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/continuous-delivery-java.html">Guide to Testing and Deploying a Java Application to Pivotal Cloud Foundry&reg;</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/cloudbees/continuous-delivery-ruby.html">Guide to Testing and Deploying a Ruby Application to Pivotal Cloud Foundry&reg;</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/continuous-delivery-ruby.html">Guide to Testing and Deploying a Ruby Application to Pivotal Cloud Foundry&reg;</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/cloudbees/security.html">Security-Integrating CloudBees Jenkins Enterprise with Pivotal Cloud Foundry&reg;</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/security.html">Security-Integrating CloudBees Jenkins Enterprise with Pivotal Cloud Foundry&reg;</a>
+        </span>
       </li>
-	 <li class="first expanded js-maintopic">
-        <a href="/cloudbees/restore.html">Restore CloudBees Jenkins Platform</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/restore.html">Restore CloudBees Jenkins Platform</a>
+        </span>
       </li>
-	 <li class="first expanded js-maintopic">
-        <a href="/cloudbees/backup.html">Back Up CloudBees Jenkins Platform</a>
+
+      <li>
+        <span>
+          <a href="/cloudbees/backup.html">Back Up CloudBees Jenkins Platform</a>
+        </span>
       </li>
+
     </ul>
   </div>
 </div><!--end of sub-nav-->
