standardize subnavs for all pcfservice repos

--- a/source/subnavs/mobile_subnav.erb
+++ b/source/subnavs/mobile_subnav.erb
@@ -1,51 +1,100 @@
-<div id="sub-nav" class="js-sidenav nav-container"><a class="sidenav-title">Doc Index</a>
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+  <a class="sidenav-title" data-behavior="SubMenuMobile">
+    Doc Index
+  </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">Home</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/mobile/index.html">Mobile Services Docs Home</a></li>
-          </ul>
-        </div>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/mobile/index.html">Pivotal Cloud Foundry Mobile Services&#153;</a>
+        </span>
       </li>
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">API Gateway</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/mobile/apigateway/index.html">Overview</a></li>
-            <li class="menu-link"><a href="/mobile/apigateway/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/mobile/apigateway/dashboard-user-guide.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/mobile/apigateway/development-guide/index.html">Development Guide</a></li>
-            <li class="menu-link"><a href="/mobile/apigateway/release-notes.html">Release Notes</a></li>
-          </ul>
-        </div>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/mobile/apigateway/index.html">API Gateway</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/mobile/apigateway/installation.html">Installation</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/apigateway/dashboard-user-guide.html">Dashboard User Guide</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/apigateway/development-guide/index.html">Development Guide</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/apigateway/release-notes.html">Release Notes</a>
+            </span>
+          </li>
+        </ul>
       </li>
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">App Analytics (Beta)</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/mobile/app_analytics/index.html">Overview</a></li>
-            <li class="menu-link"><a href="/mobile/app_analytics/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/mobile/app_analytics/dashboard-user-guide.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/mobile/app_analytics/development-guide.html">Development Guide</a></li>
-            <li class="menu-link"><a href="/mobile/app_analytics/release-notes.html">Release Notes</a></li>
-          </ul>
-        </div>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/mobile/app_analytics/index.html">App Analytics (Beta)</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/mobile/app_analytics/installation.html">Installation</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/app_analytics/dashboard-user-guide.html">Dashboard User Guide</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/app_analytics/development-guide.html">Development Guide</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/app_analytics/release-notes.html">Release Notes</a>
+            </span>
+          </li>
+        </ul>
       </li>
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">Data Sync</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/mobile/data/index.html">Overview</a></li>
-            <li class="menu-link"><a href="/mobile/data/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/mobile/data/dashboard-user-guide.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/mobile/data/development-guide.html">Development Guide</a></li>
-            <li class="menu-link"><a href="/mobile/data/release-notes.html">Release Notes</a></li>
-          </ul>
-        </div>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/mobile/data/index.html">Data Sync</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/mobile/data/installation.html">Installation</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/data/dashboard-user-guide.html">Dashboard User Guide</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/data/development-guide.html">Development Guide</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/mobile/data/release-notes.html">Release Notes</a>
+            </span>
+          </li>
+        </ul>
       </li>
+
     </ul>
   </div>
-</div>
-<!--end of sub-nav-->
+</div><!--end of sub-nav-->
+
