--- a/source/subnavs/pivotal_redis_service_subnav_16.erb
+++ b/source/subnavs/pivotal_redis_service_subnav_16.erb
@@ -6,7 +6,7 @@
     <ul class="menu">
       <li>
         <span class="topic">
-          <a id='home-nav-link' href="/redis/index.html">Redis for Pivotal Cloud Foundry&reg;</a>
+          <a id='home-nav-link' href="/redis/index.html">Redis for PCF&reg;</a>
         </span>
       </li>
 
@@ -30,7 +30,7 @@
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/redis/installing.html">Installing Redis for Pivotal Cloud Foundry&reg;</a>
+          <a href="/redis/installing.html">Installing Redis for PCF&reg;</a>
         </span>
         <ul>
           <li><span class="topic"><a href="/redis/installing.html#install">Installation Steps</a></span></li>
@@ -41,7 +41,7 @@
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/redis/using.html">Using Redis for Pivotal Cloud Foundry&reg;</a>
+          <a href="/redis/using.html">Using Redis for PCF&reg;</a>
         </span>
         <ul>
           <li><span class="topic"><a href="/redis/using.html#create">Creating a Redis Service Instance</a></span></li>
@@ -52,7 +52,7 @@
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/redis/maintain.html">Maintaining Redis for Pivotal Cloud Foundry&reg;</a>
+          <a href="/redis/maintain.html">Maintaining Redis for PCF&reg;</a>
         </span>
         <ul>
           <li><span class="topic"><a href="/redis/maintain.html#backup">Creating Backups of Redis Instances</a></span></li>
@@ -62,7 +62,7 @@
 
       <li>
         <span>
-          <a href="/redis/upgrade.html">Upgrading Redis for Pivotal Cloud Foundry&reg;</a>
+          <a href="/redis/upgrade.html">Upgrading Redis for PCF&reg;</a>
         </span>
       </li>
 
