--- a/source/subnavs/pivotal_service_backups_subnav.erb
+++ b/source/subnavs/pivotal_service_backups_subnav.erb
@@ -1,26 +1,4 @@
-<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
-  <a class="sidenav-title" data-behavior="SubMenuMobile">
-    Doc Index
-  </a>
-  <div class="nav-content deepnav-content">
-    <ul class="menu">
-      <li><span class="topic"><a id='home-nav-link' href="/service-backup/index.html">Service Backups for Pivotal Cloud Foundry&reg;</a></span>
-        <ul>
-          <li><span class="topic"><a href="/service-backup/index.html#configuration">Configuration</a></span>
-            <ul>
-              <li><span class="topic"><a href="/service-backup/index.html#uploading">Uploading a service backup release</a></span></li>
-              <li><span class="topic"><a href="/service-backup/index.html#configuring">Configuring the manifest</a></span>
-                <ul>
-                  <li><span class="topic"><a href="/service-backup/index.html#adding-service">Adding service backups to your service deployment</a></span></li>
-                  <li><span class="topic"><a href="/service-backup/index.html#configuring-backup-schedule">Configuring the backup schedule</a></span></li>
-                  <li><span class="topic"><a href="/service-backup/index.html#defining-files">Defining the files to be be backed up</a></span></li>
-                  <li><span class="topic"><a href="/service-backup/index.html#preparing-files">Preparing the files to be backed up</a></span></li>
-                  <li><span class="topic"><a href="/service-backup/index.html#cleaning-files">Cleaning up the files which were backed up</a></span></li>
-                  <li><span class="topic"><a href="/service-backup/index.html#correlating">Correlating BOSH instances to Cloud Foundry service instances</a></span></li>
-                  <li><span class="topic"><a href="/service-backup/index.html#disabling">Disabling Service Backups</a></span></li>
-                </ul>
-              </li>
-              <li><span class="topic"><a href="/service-backup/index.html#backup-destinations">Backup Destinations</a></span>
+              <li><span class="topic"><a href=""></a></span>
                 <ul>
                   <li><span class="topic"><a href="/service-backup/index.html#s3">S3</a></span></li>
                   <li><span class="topic"><a href="/service-backup/index.html#azure">Azure</a></span></li>
@@ -29,13 +7,66 @@
               </li>
             </ul>
           </li>
-          <li><span class="topic"><a href="/service-backup/index.html#operating">Operating</a></span>
+          <li><span class="topic"><a href=""></a></span>
             <ul>
-              <li><span class="topic"><a href="/service-backup/index.html#locating-the-backups">Locating the backups</a></span></li>
+              <li><span class="topic"><a href=""></a></span></li>
             </ul>
           </li>
         </ul>
       </li>
+    </ul>
+  </div>
+</div><!--end of sub-nav-->
+
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+  <a class="sidenav-title" data-behavior="SubMenuMobile">
+    Doc Index
+  </a>
+  <div class="nav-content">
+    <ul class="menu">
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/service-backup/index.html">Service Backups for Pivotal Cloud Foundry&reg;</a>
+        </span>
+      </li>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/service-backup/index.html#configuration">Configuration</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/service-backup/index.html#uploading">Uploading a service backup release</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/service-backup/index.html#configuring">Configuring the manifest</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/service-backup/index.html#backup-destinations">Backup Destinations</a>
+            </span>
+          </li>
+
+        </ul>
+      </li>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/service-backup/index.html#operating">Operating</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/service-backup/index.html#locating-the-backups">Locating the backups</a>
+            </span>
+          </li>
+        </ul>
+      </li>
+
     </ul>
   </div>
 </div><!--end of sub-nav-->
