--- a/source/subnavs/app_dist_subnav.erb
+++ b/source/subnavs/app_dist_subnav.erb
@@ -1,18 +1,33 @@
-<div id="sub-nav" class="js-sidenav nav-container"><a class="sidenav-title">Doc Index</a>
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+  <a class="sidenav-title" data-behavior="SubMenuMobile">
+    Doc Index
+  </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">App Distribution</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/app-dist/index.html">Overview</a></li>
-            <li class="menu-link"><a href="/app-dist/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/app-dist/create_build_release.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/app-dist/release-notes.html">Release Notes</a></li>
-          </ul>
-        </div>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/app-dist/index.html">Pivotal Cloud Foundry&reg; App Distribution Service</a>
+        </span>
       </li>
+
+      <li>
+        <span>
+          <a href="/app-dist/installation.html">Installation</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="/app-dist/create_build_release.html">Dashboard User Guide</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="/app-dist/release-notes.html">Release Notes</a>
+        </span>
+      </li>
+
     </ul>
   </div>
-</div>
-<!--end of sub-nav-->
+</div><!--end of sub-nav-->
