--- a/source/subnavs/pivotal_rabbitmq_service_subnav.erb
+++ b/source/subnavs/pivotal_rabbitmq_service_subnav.erb
@@ -1,39 +1,69 @@
-<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="first expanded js-maintopic">
-        <a id='home-nav-link' href="/rabbitmq-cf/index.html">Overview</a>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/rabbitmq-cf/index.html">RabbitMQ for PCF&reg;</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/deploying.html">Deploying</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/deploying.html">Deploying</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/upgrade.html">Upgrades</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/upgrade.html">Upgrades</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/configuring.html">Configuring</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/configuring.html">Configuring</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/policies.html">Policies</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/policies.html">Policies</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/partitions.html">Clustering and Network Partitions</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/partitions.html">Clustering and Network Partitions</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/managing.html">Managing</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/managing.html">Managing</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/vcap-services.html">Environment Variables</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/vcap-services.html">Environment Variables</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/releases.html">Release Notes</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/releases.html">Release Notes</a>
+        </span>
       </li>
-      <li class="first expanded js-maintopic">
-        <a href="/rabbitmq-cf/resources.html">Resource Requirements</a>
+
+      <li>
+        <span>
+          <a href="/rabbitmq-cf/resources.html">Resource Requirements</a>
+        </span>
       </li>
+
     </ul>
   </div>
 </div><!--end of sub-nav-->
