Add subnav for Queue Overflow
[#119930149]

Signed-off-by: Ada Solcan <asolcan@pivotal.io>

--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -72,6 +72,15 @@
         </span>
       </li>
 
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/logsearch/troubleshooting.html">Troubleshooting</a>
+        </span>
+        <ul>
+          <li><span class="topic"><a href="/logsearch/troubleshooting.html#queue-overflow">Recovering from Queue Overflow</a></span></li>
+        </ul>
+      </li>
+
     </ul>
   </div>
 </div><!--end of sub-nav-->
