standardize subnavs for all pcfservice repos

--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -1,41 +1,113 @@
-<div id="sub-nav" class="js-sidenav nav-container" role="navigation"><a class="sidenav-title">Doc Index</a>
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+  <a class="sidenav-title" data-behavior="SubMenuMobile">
+    Doc Index
+  </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="menu-item js-menu-item">
-        <div class="menu-title js-menu-title">Push Notification Service</div>
-        <div class="menu-content js-menu-content">
-          <ul>
-            <li class="menu-link"><a href="/push/">Overview</a></li>
-            <li class="menu-link"><a href="/push/installation.html">Installation</a></li>
-            <li class="menu-link"><a href="/push/devops.html">DevOps Guide</a></li>
-            <li class="menu-link"><a href="/push/release-notes.html">Release Notes</a></li>
-            <li class="menu-link"><a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a></li>
-            <li class="menu-link"><a href="/push/network.html">Network Setup Guide</a></li>
-            <li>
-              <div class="menu-subtitle js-menu-subtitle">Development Guide</div>
-              <ul>
-                <li class="menu-link"><a href="/push/v1_4_0/first-push-walkthrough/">First Push Walkthrough</a></li>
-                <li class="menu-link"><a href="/push/v1_4_0/geofence-walkthrough/">First Geofence Walkthrough</a></li>
-                <li class="menu-link"><a href="/push/ios/">iOS</a></li>
-                <li class="menu-link"><a href="/push/android/">Android</a></li>
-                <li class="menu-link"><a href="/push/windowsphone81/">Windows Phone 8.1</a></li>
-                <li>
-                  <div class="menu-subtitle menu-js-subtitle">APIs</div>
-                  <ul>
-                    <li><a href="/push/v1_4_0/api/push/">Push API</a></li>
-                    <li><a href="/push/v1_4_0/api/registration/">Registration API</a></li>
-                    <li><a href="/push/v1_4_0/api/tags/">Tags API</a></li>
-                    <li><a href="/push/v1_4_0/api/schedules/">Schedules API</a></li>
-                    <li><a href="/push/v1_4_0/api/geofences/">Geofences API</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-
-          </ul>
-        </div>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="/push/index.html">Push Notification Service</a>
+        </span>
       </li>
+
+      <li>
+        <span>
+          <a href="/push/installation.html">Installation</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="/push/devops.html">DevOps Guide</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="/push/release-notes.html">Release Notes</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="/push/network.html">Network Setup Guide</a>
+        </span>
+      </li>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="">Development Guide</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/first-push-walkthrough/index.html">First Push Walkthrough</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/geofence-walkthrough/index.html">First Geofence Walkthrough</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/ios/index.html">iOS</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/android/index.html">Android</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/windowsphone81/index.html">Windows Phone 8.1</a>
+            </span>
+          </li>
+
+        </ul>
+      </li>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="">APIs</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/api/push/index.html">Push API</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/api/registration/index.html">Registration API</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/api/tags/index.html">Tags API</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/api/schedules/index.html">Schedules API</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="/push/v1_4_0/api/geofences/index.html">Geofences API</a>
+            </span>
+          </li>
+
+        </ul>
+      </li>
+
     </ul>
   </div>
-</div>
-<!--end of sub-nav-->
+</div><!--end of sub-nav-->
