--- a/source/subnavs/pivotal_ds_subnav.erb
+++ b/source/subnavs/pivotal_ds_subnav.erb
@@ -1,33 +1,63 @@
-<div id="sub-nav" class="js-sidenav nav-container">
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+  <a class="sidenav-title" data-behavior="SubMenuMobile">
+    Doc Index
+  </a>
   <div class="nav-content">
     <ul class="menu">
-      <li class="menu-link" >
-        <a id='home-nav-link' href="index.html">Pivotal HD for PCF 1.3.2.0</a>
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="index.html">Pivotal HD for PCF&reg; 1.3.2.0</a>
+        </span>
       </li>
-      <li class=" menu-link">
-        <a href="overview.html">Overview of Pivotal HD for PCF</a>
+
+      <li>
+        <span>
+          <a href="overview.html">Overview of Pivotal HD for PCF&reg;</a>
+        </span>
       </li>
-      <li class=" menu-link">
-        <a href="installation.html">Installing and Upgrading Pivotal HD for PCF</a>
+
+      <li>
+        <span>
+          <a href="installation.html">Installing and Upgrading Pivotal HD for PCF&reg;</a>
+        </span>
       </li>
-      <li class="menu-link">
-        <a href="service_plans.html">Creating and Modifying On-Demand Service Plans</a>
+
+      <li>
+        <span>
+          <a href="service_plans.html">Creating and Modifying On-Demand Service Plans</a>
+        </span>
       </li>
-      <li class="menu-link">
-        <a href="isilon.html">HDFS Isilon Integration</a>
+
+      <li>
+        <span>
+          <a href="isilon.html">HDFS Isilon Integration</a>
+        </span>
       </li>
-      <li class="menu-link">
-        <a href="external-service-plans.html">Creating External Service Plans</a>
+
+      <li>
+        <span>
+          <a href="external-service-plans.html">Creating External Service Plans</a>
+        </span>
       </li>
-      <li class="menu-link">
-        <a href="data_service.html">Using a Pivotal HD Service Instance</a>
+
+      <li>
+        <span>
+          <a href="data_service.html">Using a Pivotal HD Service Instance</a>
+        </span>
       </li>
-      <li class="menu-link">
-        <a href="troubleshooting.html">Troubleshooting</a>
+
+      <li>
+        <span>
+          <a href="troubleshooting.html">Troubleshooting</a>
+        </span>
       </li>
-      <li class="menu-link">
-        <a href="relnotes.html">Release Notes</a>
+
+      <li>
+        <span>
+          <a href="relnotes.html">Release Notes</a>
+        </span>
       </li>
+
 
     </ul>
   </div>
