--- a/source/subnavs/subnav_template.erb
+++ b/source/subnavs/subnav_template.erb
@@ -1,7 +1,39 @@
-<div id="sub-nav" class="nav-container" role="navigation" >
-  <a class="sidenav-title">
+<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+  <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
-  <div class="nav-content deepnav-content">
+  <div class="nav-content">
+    <ul class="menu">
+      <li>
+        <span class="topic">
+          <a id='home-nav-link' href="PATHTOINDEX">LANDINGPAGE</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
+          <a href="PATHTOSINGLE">SINGLE</a>
+        </span>
+      </li>
+
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="PATHTOHEADER">HEADERDOC</a>
+        </span>
+        <ul>
+          <li>
+            <span class="topic">
+              <a href="PATHTOITEM">ITEM1</a>
+            </span>
+          </li>
+          <li>
+            <span class="topic">
+              <a href="PATHTOITEMANCHOR">ITEM2</a>
+            </span>
+          </li>
+        </ul>
+      </li>
+
+    </ul>
   </div>
-</div>
+</div><!--end of sub-nav-->
