--- a/source/subnavs/subnav_template.erb
+++ b/source/subnavs/subnav_template.erb
@@ -1,39 +1,7 @@
-<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
-  <a class="sidenav-title" data-behavior="SubMenuMobile">
+<div id="sub-nav" class="nav-container" role="navigation" >
+  <a class="sidenav-title">
     Doc Index
   </a>
-  <div class="nav-content">
-    <ul class="menu">
-      <li>
-        <span class="topic">
-          <a id='home-nav-link' href="PATHTOINDEX">LANDINGPAGE</a>
-        </span>
-      </li>
-
-      <li>
-        <span>
-          <a href="PATHTOSINGLE">SINGLE</a>
-        </span>
-      </li>
-
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="PATHTOHEADER">HEADERDOC</a>
-        </span>
-        <ul>
-          <li>
-            <span class="topic">
-              <a href="PATHTOITEM">ITEM1</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="PATHTOITEMANCHOR">ITEM2</a>
-            </span>
-          </li>
-        </ul>
-      </li>
-
-    </ul>
+  <div class="nav-content deepnav-content">
   </div>
-</div><!--end of sub-nav-->
+</div>
