Modifies logsearch subnav
Signed-off-by: Landon Jarzynski <ljarzynski@pivotal.io>

--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -11,12 +11,6 @@
       </li>
 
       <li>
-        <span class="topic">
-          <a href="/logsearch/overview.html">Overview</a>
-        </span>
-      </li>
-
-      <li>
         <span>
           <a href="/logsearch/release.html">Release Notes</a>
         </span>
@@ -27,10 +21,10 @@
           <a href="/logsearch/installing.html">Installing Pivotal Cloud Foundry&reg; Log Search</a>
         </span>
         <ul>
-          <li><span class="topic"><a href="/logsearch/installing.html#installation">Installation via Pivotal Operation Manager</a></span></li>
+          <li><span class="topic"><a href="/logsearch/installing.html#installation">Install via Pivotal Ops Manager</a></span></li>
           <li><span class="topic"><a href="/logsearch/installing.html#elastic-runtime">Elastic Runtime and Data Service Component Logs</a></span></li>
           <li><span class="topic"><a href="/logsearch/installing.html#kibana">Kibana</a></span></li>
-          <li><span class="topic"><a href="/logsearch/installing.html#installing-elastic-runtime">Installing without Elastic Runtime</a></span></li>
+          <li><span class="topic"><a href="/logsearch/installing.html#installing-elastic-runtime">Install without Elastic Runtime</a></span></li>
         </ul>
       </li>
 
@@ -39,20 +33,30 @@
           <a href="/logsearch/using.html">Using Pivotal Cloud Foundry&reg; Log Search</a>
         </span>
         <ul>
-          <li><span class="topic"><a href="/logsearch/using.html#discover-pane">Finding logs in the Discover pane</a></span></li>
-          <li><span class="topic"><a href="/logsearch/using.html#creating-a-visualization">Creating a visualization</a></span></li>
-          <li><span class="topic"><a href="/logsearch/using.html#creating-a-dashboard">Creating a dashboard</a></span></li>
+          <li><span class="topic"><a href="/logsearch/using.html#discover-pane">Find Logs in the Discover Page</a></span></li>
+          <li><span class="topic"><a href="/logsearch/using.html#create-a-visualization">Create a Visualization</a></span></li>
+          <li><span class="topic"><a href="/logsearch/using.html#creating-a-dashboard">Create a Dashboard</a></span></li>
         </ul>
       </li>
 
+      <li>
+        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
+          <a href="/logsearch/search-guide.html">Data Dictionary and Search Guide</a>
+        </span>
+        <ul>
+          <li><span class="topic"><a href="/logsearch/search-guide.html#data-dictionary">Data Dictionary</a></span></li>
+          <li><span class="topic"><a href="/logsearch/search-guide.html#search-examples">Search Examples</a></span></li>
+        </ul>
+      </li>
 
+<!--- commenting out because these pages are likely to be added back later
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
           <a href="/logsearch/maintain.html">Maintaining Pivotal Cloud Foundry&reg; Log Search</a>
         </span>
         <ul>
-          <li><span class="topic"><a href="/logsearch/maintain.html#monitoring">Monitoring Log Search cluster</a></span></li>
-          <li><span class="topic"><a href="/logsearch/maintain.html#backing-up">Backing up Kibana dashboards</a></span></li>
+          <li><span class="topic"><a href="/logsearch/maintain.html#monitoring">Monitor Log Search Cluster</a></span></li>
+          <li><span class="topic"><a href="/logsearch/maintain.html#backing-up">Back Up Kibana Dashboards</a></span></li>
         </ul>
       </li>
 
@@ -71,13 +75,14 @@
           <a href="/logsearch/upgrade.html">Upgrading Pivotal Cloud Foundry&reg; Log Search</a>
         </span>
       </li>
+--->
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
           <a href="/logsearch/troubleshooting.html">Troubleshooting</a>
         </span>
         <ul>
-          <li><span class="topic"><a href="/logsearch/troubleshooting.html#queue-overflow">Recovering from Queue Overflow</a></span></li>
+          <li><span class="topic"><a href="/logsearch/troubleshooting.html#no-logs">No Logs on Kibana</a></span></li>
         </ul>
       </li>
 
