sidebar for getting started with on-demand broker
Signed-off-by: Jatin Naik <jnaik@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -30,6 +30,13 @@
       </li>
 
       <li>
+        <span>
+          <a href="/on-demand-service-broker/getting-started.html">Setting up a local environment</a>
+        </span>
+      </li>
+
+
+      <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
           <a href="/on-demand-service-broker/creating.html">Creating a service adapter</a>
         </span>
