add link to new topic on scaling down mysql clusters to subnav of p-mysql docs[#120617413]

--- a/source/subnavs/pivotal_mysql_service_subnav.erb
+++ b/source/subnavs/pivotal_mysql_service_subnav.erb
@@ -64,7 +64,12 @@
             </li>
             <li class="menu-link">
               <a href="/p-mysql/backup.html">
-                Backing up MySQL
+                Backing Up MySQL
+              </a>
+            </li>
+            <li class="menu-link">
+              <a href="/p-mysql/scaling-down.html">
+                Scaling Down MySQL
               </a>
             </li>
         </div>
