Revert "Update layout to work with new bookbinder styles and provided sidenav"
This reverts commit cec17e1602b956336227a5ef5ea7f748b7de22e4.

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -1,6 +1,3 @@
-@import "compass";
-@import "extends";
-
 /*
  * FILE: _header.scss
 ======================================================================== */
@@ -86,11 +83,11 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   }
 }
 .btn-menu {
+  @extend .fa-bars;
   float: right;
   position: relative;
   right: -1em;
   &:before {
-    content: $fa-var-bars;
     @extend .fa;
     padding-right: 0.4em;
     padding-top: 0.4em;
@@ -104,9 +101,9 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   }
 }
 .menu-active .btn-menu {
+  @extend .fa-plus;
   margin-bottom: 0.5em;
   &:before {
-    content: $fa-var-plus;
     @include transform(rotate(45deg));
     @include transform-origin(0.4em 0.7em);
   }
@@ -241,8 +238,8 @@ category: basics
 
 // search icon
 .search-icon {
+  @extend .fa-search;
   &:before {
-    content: $fa-var-search;
     color: #c7c7c7;
     @extend .fa;
   }
