Include stylesheets for old subnav
[finish #120301051]

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -24,6 +24,7 @@
 @import "partials/local-header";
 @import "partials/footer";
 @import "partials/sidenav";
+@import "partials/sidenav_old";
 @import "partials/fix-search-tables";
 @import "partials/search";
 
