Fixes logsearch subnav

--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -9,13 +9,20 @@
           <a id='home-nav-link' href="/logsearch/index.html">Pivotal Cloud Foundry&reg; Log Search</a>
         </span>
       </li>
-
       <li>
-          <a href="/logsearch/release.html">Release Notes</a>
-          <a href="/logsearch/installing.html">Installing</a>
-          <a href="/logsearch/using.html">Using</a>
-          <a href="/logsearch/search-guide.html">Search Guide</a>
-          <a href="/logsearch/troubleshooting.html">Troubleshooting</a>
+          <span><a href="/logsearch/release.html">Release Notes</a></span>
+      </li>
+      <li>
+          <span><a href="/logsearch/installing.html">Installing PCF Log Search</a></span>
+      </li>
+      <li>
+          <span><a href="/logsearch/using.html">Using PCF Log Search</a></span>
+      </li>
+      <li>
+          <span><a href="/logsearch/search-guide.html">Data Dictionary Search Guide</a></span>
+      </li>
+      <li>
+          <span><a href="/logsearch/troubleshooting.html">Troubleshooting</a></span>
       </li>
      </ul>
     </div>
