No longer pass in environment whitelist for repo link
- bookbinder will always show it if configured for the book

[finish #119649883]

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -278,7 +278,7 @@
           <gcse:searchresults></gcse:searchresults>
         <% end %>
         <%= yield %>
-        <%= render_repo_link(include_environments: ['staging', 'acceptance', 'cloudfoundry', 'localhost']) %>
+        <%= render_repo_link %>
       </main><!--end of content-->
 
     </div><!-- end of container -->
