--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -19,7 +19,7 @@
           <span><a href="/logsearch/using.html">Using PCF Log Search</a></span>
       </li>
       <li>
-          <span><a href="/logsearch/search-guide.html">Data Dictionary Search Guide</a></span>
+          <span><a href="/logsearch/search-guide.html">Log Search Tags Dictionary</a></span>
       </li>
       <li>
           <span><a href="/logsearch/troubleshooting.html">Troubleshooting</a></span>
