adds scaling topic to ls subnav[#120967209]

--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -16,10 +16,13 @@
           <span><a href="/logsearch/installing.html">Installing PCF Log Search</a></span>
       </li>
       <li>
+          <span><a href="/logsearch/scaling.html">Scaling PCF Log Search</a></span>
+      </li>
+      <li>
           <span><a href="/logsearch/using.html">Using PCF Log Search</a></span>
       </li>
       <li>
-          <span><a href="/logsearch/search-guide.html">Log Search Tags Dictionary</a></span>
+          <span><a href="/logsearch/search-guide.html">PCF Log Search Tags Dictionary</a></span>
       </li>
       <li>
           <span><a href="/logsearch/troubleshooting.html">Troubleshooting</a></span>
