Allow dita books to use local header
[#118862793]

Signed-off-by: Han Chen <hchen@pivotal.io>

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -212,7 +212,7 @@
 
       <main class="content content-layout" id="js-content" role="main">
         <a id="top"></a>
-        <% if current_page.data.title && !current_page.data.dita %>
+        <% if current_page.data.title %>
             <% if product_info['use_local_header'] %>
               <div class="local-header title-container">
                 <div class="local-header version-info">
