--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -227,70 +227,66 @@
 
       <main class="content content-layout" id="js-content" role="main">
         <a id="top"></a>
-        <% if current_page.data.title %>
-            <% if product_info['use_local_header'] %>
-              <div class="local-header title-container">
-                <div class="local-header version-info">
-                  LATEST VERSION: <%= product_info['latest_stable_version'] %> - <a href="<%= product_info['changelog_href'] %>">CHANGELOG</a>
-                </div>
-                <div class="local-header local-title clearfix">
-                  <img src="<%= product_info['local_header_img'] %>">
-                  <span class="local-header-title"><%= product_info['local_header_title'] %>
-                  </span>
-                  <span class="local-header local-version header-dropdown">
-                    <a class="local-header header-dropdown-link">v<%= product_info['latest_stable_version'] %></a>
-                    <span class="local-header header-dropdown-content">
-                      <ul>
-                        <% if product_info['local_header_version_list'] %>
-                          <% product_info['local_header_version_list'].each do |version| %>
-                            <li>
-                              <% if version.is_a?(Hash) %>
-                                <a href="<%= version['url_prefix'] %><%= current_page.path.sub(product_info['url_prefix'], '') %>"><%= version['display_name'] %></a>
-                              <% else %>
-                                <%= version %>
-                              <% end %>
-                            </li>
-                          <% end %>
-                        <% end %>
-                      </ul>
-                    </span>
-                  </span>
-
-                  <span class="local-header local-search">
-                    <% if defined?(elastic_search?) && elastic_search? %>
-                      <form class="local-header-search-form" method="get" action="/search">
-                        <input class="local-header-search-input" name="q" placeholder="<%= product_info['search_placeholder'] || 'Search' %>" />
-                        <input type="hidden" name="product_name" value="<%= product_info['local_header_title'] %>" />
-                        <% unless product_info['local_product_version'].nil? %>
-                          <input type="hidden" name="product_version" value="<%= product_info['local_product_version'] %>"/>
-                        <% end %>
-                      </form>
-                    <% elsif (defined?(body_classes) ? body_classes : page_classes).match(/^pivotalcf /) %>
-                      <gcse:searchbox as_sitesearch="docs.pivotal.io/pivotalcf"></gcse:searchbox>
-                    <% else %>
-                      <gcse:searchbox placeholder="something"></gcse:searchbox>
-                    <% end %>
-                  </span>
-                </div>
-                <div class="local-header local-header-links">
-                  <% product_info['local_header_links'].each do |link| %>
-                    <%= link %>
-                  <% end %>
-                </div>
-              </div>
-            <h1 class="title-container">
-              <%= current_page.data.title %>
-            </h1>
-          <% else %>
-            <h1 class="title-container">
-              <%= current_page.data.title %>
-            </h1>
-          <% end %>
-          <% if quick_links %>
-            <div id="js-quick-links">
-              <%= quick_links %>
+        <% if product_info['use_local_header'] %>
+          <div class="local-header title-container">
+            <div class="local-header version-info">
+              LATEST VERSION: <%= product_info['latest_stable_version'] %> - <a href="<%= product_info['changelog_href'] %>">CHANGELOG</a>
             </div>
-          <% end %>
+            <div class="local-header local-title clearfix">
+              <img src="<%= product_info['local_header_img'] %>">
+              <span class="local-header-title"><%= product_info['local_header_title'] %>
+              </span>
+              <span class="local-header local-version header-dropdown">
+                <a class="local-header header-dropdown-link">v<%= product_info['latest_stable_version'] %></a>
+                <span class="local-header header-dropdown-content">
+                  <ul>
+                    <% if product_info['local_header_version_list'] %>
+                      <% product_info['local_header_version_list'].each do |version| %>
+                        <li>
+                          <% if version.is_a?(Hash) %>
+                            <a href="<%= version['url_prefix'] %><%= current_page.path.sub(product_info['url_prefix'], '') %>"><%= version['display_name'] %></a>
+                          <% else %>
+                            <%= version %>
+                          <% end %>
+                        </li>
+                      <% end %>
+                    <% end %>
+                  </ul>
+                </span>
+              </span>
+
+              <span class="local-header local-search">
+                <% if defined?(elastic_search?) && elastic_search? %>
+                  <form class="local-header-search-form" method="get" action="/search">
+                    <input class="local-header-search-input" name="q" placeholder="<%= product_info['search_placeholder'] || 'Search' %>" />
+                    <input type="hidden" name="product_name" value="<%= product_info['local_header_title'] %>" />
+                    <% unless product_info['local_product_version'].nil? %>
+                      <input type="hidden" name="product_version" value="<%= product_info['local_product_version'] %>"/>
+                    <% end %>
+                  </form>
+                <% elsif (defined?(body_classes) ? body_classes : page_classes).match(/^pivotalcf /) %>
+                  <gcse:searchbox as_sitesearch="docs.pivotal.io/pivotalcf"></gcse:searchbox>
+                <% else %>
+                  <gcse:searchbox placeholder="something"></gcse:searchbox>
+                <% end %>
+              </span>
+            </div>
+            <div class="local-header local-header-links">
+              <% product_info['local_header_links'].each do |link| %>
+                <%= link %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+        <% if current_page.data.title %>
+          <h1 class="title-container" <%= current_page.data.dita ? 'style="display: none;"' : '' %>>
+            <%= current_page.data.title %>
+          </h1>
+        <% end %>
+        <% if quick_links %>
+          <div id="js-quick-links">
+            <%= quick_links %>
+          </div>
         <% end %>
         <div class="to-top" id="js-to-top">
           <a href="#top" title="back to top"></a>
