Update stuff to make use of new bookbinder layouts
[#120031033]

Signed-off-by: Gregg Van Hove <gvanhove@pivotal.io>

--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -2,7 +2,7 @@
  * FILE: _footer.scss
 ======================================================================== */
 .site-footer-links {
-  @extend %h-xs;
+  font-size: $font-size-xs;
   clear: both;
   padding: 1em 30px 4em 30px;
   a {
