Fix prodname font-sizing
Signed-off-by: Han Chen <hchen@pivotal.io>

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -101,7 +101,7 @@ category: basics
   }
 }
 .prodname {
-  font-size: $font-size-xs;
+  font-size: $font-size-m;
   line-height: 1.1;
 }
 .action {
