add logging and metrics topic to subnav of rabbit mq

--- a/source/subnavs/pivotal_rabbitmq_service_subnav.erb
+++ b/source/subnavs/pivotal_rabbitmq_service_subnav.erb
@@ -54,6 +54,12 @@
 
       <li>
         <span>
+          <a href="/rabbitmq-cf/metrics_logging.html">Logging, Heartbeats, and Metrics</a>
+        </span>
+      </li>
+
+      <li>
+        <span>
           <a href="/rabbitmq-cf/releases.html">Release Notes</a>
         </span>
       </li>
