Update styles to do less clobbering of base bookbinder styles
[#121262305]

Signed-off-by: Gregg Van Hove <gvanhove@pivotal.io>

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -1,11 +1,14 @@
-@import "base";
+@import "partials/mixins";
 
 // content
 @import "partials/3rdparty";
 @import "partials/global-header";
 @import "partials/local-header";
-@import "partials/sidenav_old";
 @import "partials/fix-search-tables";
+
+* {
+  box-sizing: border-box;
+}
 
 // ~BREADCRUMB
 // ===================================================
