--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -1,4 +1,7 @@
 @import "compass/utilities/color/contrast";
+@import "compass/css3/transform";
+@import "compass/css3/border-radius";
+
 /*
  * FILE: _header.scss
 ======================================================================== */
