--- a/source/stylesheets/styleguide.css.scss
+++ b/source/stylesheets/styleguide.css.scss
@@ -1,11 +1,9 @@
 @import "compass/utilities/color/contrast";
+@import "compass/css3/transform";
 
 // CUSTOM HELPER PARTIALS
 @import "partials/_vars.scss";
 @import "partials/_mixins.scss";
-
-// Book-specific overrides
-@import "partials/_book-vars.scss";
 
 .sg .content-layout > h1 {
   font-weight: 600;
